--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ MYSQL_PASSWORD=Test@2024!Secure
 # ============================================
 # 資料庫連接配置(給 FastAPI 使用)
 # ============================================
-DB_HOST=db
+DB_HOST=fixture_db_test
 DB_PORT=3306
 DB_USER=fixture_test
 DB_PASSWORD=Test@2024!Secure
