--- a/nginx.conf
+++ b/nginx.conf
@@ -94,8 +94,8 @@ http {
         }
 
         # API 反向代理 - 主要 API 路徑
-        location /api/v2 {
-            proxy_pass http://fastapi_backend;
+        location /api/v2/ {
+            proxy_pass http://fastapi_backend/api/v2/;
             
             # 代理標頭
             proxy_set_header Host $host;
